--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.8.3",
     "joi": "^17.13.3",
     "oidc-client-ts": "^3.1.0",
     "path": "^0.12.7",
