playwright-setup: Setting up the initial pieces.

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,27 @@ backend/*.sln
 backend/.env
 backend/*.sw?
 backend/.env.development
+
+
+e2e/logs
+e2e/*.log
+e2e/npm-debug.log*
+e2e/yarn-debug.log*
+e2e/yarn-error.log*
+e2e/pnpm-debug.log*
+e2e/lerna-debug.log*
+e2e/node_modules
+e2e/dist
+e2e/dist-ssr
+e2e/*.local
+e2e/.vscode/*
+e2e/!.vscode/extensions.json
+e2e/.idea
+e2e/.DS_Store
+e2e/*.suo
+e2e/*.ntvs*
+e2e/*.njsproj
+e2e/*.sln
+e2e/.env
+e2e/*.sw?
+e2e/.env.development
