--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.8.3",
+    "date-fns": "^4.1.0",
     "joi": "^17.13.3",
     "jwt-decode": "^4.0.0",
     "oidc-client-ts": "^3.1.0",
