--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.0.1",
-    "@mui/material": "^7.0.1"
+    "@mui/material": "^7.0.1",
+    "idb": "^8.0.2"
   }
 }
