--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.8.3",
     "date-fns": "^4.1.0",
+    "dexie": "^4.0.11",
     "joi": "^17.13.3",
     "jwt-decode": "^4.0.0",
     "oidc-client-ts": "^3.1.0",
