--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mui/icons-material": "^7.0.2",
     "axios": "^1.8.3",
     "date-fns": "^4.1.0",
     "dexie": "^4.0.11",
