--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,17 +13,25 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.0.2",
     "@mui/styled-engine": "^7.0.2",
+    "@radix-ui/react-slot": "^1.2.3",
+    "add": "^2.0.6",
     "axios": "^1.8.3",
+    "button": "^1.1.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dexie": "^4.0.11",
     "joi": "^17.13.3",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.511.0",
     "oidc-client-ts": "^3.1.0",
     "path": "^0.12.7",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-oidc-context": "^3.2.0",
-    "react-router-dom": "^7.4.0"
+    "react-router-dom": "^7.4.0",
+    "shadcn": "^2.5.0",
+    "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
@@ -31,11 +39,15 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^4.0.0",
+    "autoprefixer": "^10.4.21",
     "esbuild": "^0.19.12",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.7",
+    "tw-animate-css": "^1.3.0",
     "typescript": "^5.0.0",
     "typescript-eslint": "^8.18.2",
     "vite": "^4.0.0",
