--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^7.1.2",
     "@mui/styled-engine": "^7.0.2",
     "@radix-ui/react-slot": "^1.2.3",
+    "@tanstack/react-query": "^5.81.5",
     "add": "^2.0.6",
     "axios": "^1.8.3",
     "button": "^1.1.1",
