--- a/backend/package.json
+++ b/backend/package.json
@@ -9,8 +9,8 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "cross-env NODE_ENV=development nest start",
-    "dev": "cross-env NODE_ENV=development ts-node -r tsconfig-paths/register src/main.ts",
-    "dev:watch": "cross-env NODE_ENV=development nest start --watch",
+    "dev": "npm run migration:run && cross-env NODE_ENV=development ts-node -r tsconfig-paths/register src/main.ts",
+    "dev:watch": "npm run migration:run && cross-env NODE_ENV=development nest start --watch",
     "start:debug": "cross-env NODE_ENV=development nest start --debug --watch",
     "start:prod": "node dist/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
