--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^7.1.2",
     "@mui/material": "^7.2.0",
     "@mui/styled-engine": "^7.0.2",
+    "@mui/x-charts": "^8.9.0",
     "@mui/x-data-grid": "^8.9.1",
     "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-query": "^5.81.5",
