--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,6 +48,8 @@
     "autoprefixer": "^10.4.21",
     "esbuild": "^0.19.12",
     "eslint": "^9.17.0",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
