--- a/backend/package.json
+++ b/backend/package.json
@@ -42,7 +42,7 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/swagger": "^7.1.17",
+    "@nestjs/swagger": "^7.4.2",
     "@nestjs/throttler": "^6.4.0",
     "@nestjs/typeorm": "^10.0.2",
     "axios": "^1.11.0",
@@ -64,7 +64,7 @@
     "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.0.0",
+    "@nestjs/cli": "^11.0.14",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
@@ -112,7 +112,8 @@
     "testEnvironment": "node"
   },
   "overrides": {
-    "jwa": "^2.0.0"
+    "jwa": "^2.0.0",
+    "js-yaml": "^4.1.1"
   },
   "lint-staged": {
     "*.ts": [
