--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "react-oidc-context": "^3.2.0",
     "react-router-dom": "^7.4.0",
     "shadcn": "^2.5.0",
+    "socket.io-client": "^4.8.3",
     "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
