--- a/backend/package.json
+++ b/backend/package.json
@@ -25,15 +25,12 @@
     "migration:run": "npx ts-node -r tsconfig-paths/register -r dotenv/config ./node_modules/typeorm/cli.js migration:run -d ./src/typeorm/data-source.ts",
     "migration:revert": "npx ts-node -r tsconfig-paths/register -r dotenv/config ./node_modules/typeorm/cli.js  migration:revert -d ./src/typeorm/data-source.ts",
     "test:architecture": "depcruise --config load-depcruise-config.js src",
-    "test:fitness": "npx ts-node -r tsconfig-paths/register run-all-fitness-checks.ts",
+    "test:fitness": "npx ts-node -r tsconfig-paths/register rules/run-all-fitness-checks.ts",
     "depcruise": "depcruise --config load-depcruise-config.js src",
     "depcruise:html": "depcruise --config load-depcruise-config.js --output-type html src > dependency-graph.html",
     "prepare": "cd .. && git config core.hooksPath backend/.husky || true"
   },
   "dependencies": {
-    "@dnd-kit/core": "^6.3.1",
-    "@dnd-kit/sortable": "^10.0.0",
-    "@dnd-kit/utilities": "^3.2.2",
     "@faker-js/faker": "^8.4.1",
     "@nestjs/axios": "^4.0.1",
     "@nestjs/common": "^10.4.15",
@@ -58,6 +55,7 @@
     "newrelic": "^11.18.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.1",
+    "rrule": "^2.8.1",
     "rxjs": "^7.8.1",
     "sqlite3": "^5.1.7",
     "striptags": "^3.2.0",
@@ -70,6 +68,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.17.24",
+    "@types/rrule": "^2.1.7",
     "@types/supertest": "^6.0.0",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
