--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^18.0.0",
     "react-oidc-context": "^3.2.0",
     "react-router-dom": "^7.4.0",
+    "rrule": "^2.8.1",
     "shadcn": "^2.5.0",
     "socket.io-client": "^4.8.3",
     "tailwind-merge": "^3.3.0"
