--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,7 @@
     "dev": "npm run migration:run && cross-env NODE_ENV=development ts-node -r tsconfig-paths/register src/main.ts",
     "dev:watch": "npm run migration:run && cross-env NODE_ENV=development nest start --watch",
     "start:debug": "cross-env NODE_ENV=development nest start --debug --watch",
-    "start:prod": "node dist/main.js",
+    "start:prod": "node dist/src/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "cross-env NODE_ENV=test jest",
     "test:watch": "cross-env NODE_ENV=test jest --watch --maxWorkers=1",
