--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dexie": "^4.0.11",
+    "fuse.js": "^7.1.0",
     "joi": "^17.13.3",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.511.0",
