Enhance CalendarView with major refactor and new features
- Added @tanstack/react-virtual for improved performance and virtualization capabilities.
- Centralized magic numbers into constants for easier maintenance and consistency.
- Implemented scroll position preservation when loading additional days, enhancing user experience.
- Introduced auto-scrolling to the current time on mount for better visibility.
- Added drag snapping to 15-minute intervals for precise event placement.
- Included loading skeleton indicators during infinite scroll for visual feedback.
- Refactored CalendarView component, reducing its size significantly and improving code organization through component extraction and hooks.
- Updated CSS styles for better layout consistency and responsiveness.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "@mui/x-data-grid": "^8.9.1",
     "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-query": "^5.81.5",
+    "@tanstack/react-virtual": "^3.13.18",
     "add": "^2.0.6",
     "axios": "^1.8.3",
     "button": "^1.1.1",
