Implement event reminder functionality in calendar events module
- Added support for creating, updating, fetching, and deleting event reminders through new actions and transaction scripts.
- Introduced EventReminder entity and repository for managing reminders in the database.
- Enhanced CalendarEventService to include methods for handling reminders.
- Updated CalendarEventsModule to integrate the new reminder features and dependencies.
- Implemented frontend hooks and components for managing reminders, including UI for setting and displaying reminders in the calendar.
- Added necessary DTOs for request and response handling of reminders.
- Updated CSS for new components to ensure consistent styling across the application.

--- a/backend/package.json
+++ b/backend/package.json
@@ -41,9 +41,11 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.0",
     "@nestjs/platform-express": "^11.0.0",
+    "@nestjs/schedule": "^6.1.0",
     "@nestjs/swagger": "^11.2.3",
     "@nestjs/throttler": "^6.4.0",
     "@nestjs/typeorm": "^11.0.0",
+    "@types/nodemailer": "^7.0.5",
     "axios": "^1.11.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
@@ -55,6 +57,7 @@
     "mongoose": "^8.7.1",
     "nestjs-pino": "^4.5.0",
     "newrelic": "^11.18.0",
+    "nodemailer": "^7.0.12",
     "passport-jwt": "^4.0.1",
     "pino-http": "^11.0.0",
     "pino-pretty": "^13.1.3",
