Update .env.sample and README.md for enhanced configuration options
- Expanded .env.sample to include additional configuration settings for JWT, cookie encryption, SMTP, and server options.
- Updated README.md with detailed instructions for configuring the application, including email reminders and environment variables.
- Added sections for database, JWT authentication, and SMTP configuration to improve clarity for developers.

--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,5 +1,28 @@
+# Database Configuration
 DATABASE=db.sqlite
-JWT_SECRET='asdasdas'
+
+# JWT Authentication
+JWT_SECRET=your-secret-key-here-change-in-production
+JWT_EXPIRES_IN=7d
+COOKIE_KEY=your-cookie-key-here-change-in-production
+
+# Environment
 NODE_ENV=development
-JWT_EXPIRES_IN=1day
-HERMES_URL=http://localhost:8000/
+
+# Server Configuration (optional)
+PORT=3000
+
+# Hermes API (for text-to-speech)
+HERMES_API_URL=http://localhost:8000
+
+# SMTP Configuration (for email reminders)
+# Gmail example:
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=your-email@gmail.com
+SMTP_PASS=your-app-password
+SMTP_FROM=your-email@gmail.com
+
+# SSL Configuration (optional)
+# SSL_KEYFILE=/path/to/server.key
+# SSL_CERTFILE=/path/to/server.crt
