add markdown mode

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,7 +40,9 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-oidc-context": "^3.2.0",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^7.4.0",
+    "remark-gfm": "^4.0.0",
     "rrule": "^2.8.1",
     "shadcn": "^2.5.0",
     "socket.io-client": "^4.8.3",
