--- a/backend/package.json
+++ b/backend/package.json
@@ -56,9 +56,7 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "joi": "^17.13.3",
-    "mongoose": "^8.7.1",
     "nestjs-pino": "^4.5.0",
-    "newrelic": "^11.18.0",
     "nodemailer": "^7.0.12",
     "passport-jwt": "^4.0.1",
     "pino-http": "^11.0.0",
@@ -124,7 +122,12 @@
   },
   "overrides": {
     "jwa": "^2.0.0",
-    "js-yaml": "^4.1.1"
+    "js-yaml": "^4.1.1",
+    "sqlite3": {
+      "node-gyp": "^10.3.2"
+    },
+    "make-fetch-happen": "^14.0.1",
+    "cacache": "^18.0.5"
   },
   "lint-staged": {
     "*.ts": [
