feat: Integrate MUI X Tree View for Tag Navigation
- Added `@mui/x-tree-view` package to enhance the tag navigation experience.
- Implemented `TagTreeNavigation` component to display tags and notes in a tree structure.
- Created `CustomTagTreeItem` for customized rendering of tree items with distinct styles for tags and notes.
- Introduced `useTagTreeItems` hook to manage fetching and structuring tag and note data.
- Updated `TagPage` to utilize the new tree navigation component, improving user interaction with tags and notes.
- Enhanced theme configuration to support new tree view styles.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@mui/styled-engine": "^7.0.2",
     "@mui/x-charts": "^8.9.0",
     "@mui/x-data-grid": "^8.9.1",
+    "@mui/x-tree-view": "^8.26.0",
     "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-query": "^5.81.5",
     "@tanstack/react-virtual": "^3.13.18",
@@ -39,8 +40,8 @@
     "path": "^0.12.7",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-oidc-context": "^3.2.0",
     "react-markdown": "^9.0.1",
+    "react-oidc-context": "^3.2.0",
     "react-router-dom": "^7.4.0",
     "remark-gfm": "^4.0.0",
     "rrule": "^2.8.1",
