--- a/backend/package.json
+++ b/backend/package.json
@@ -121,6 +121,9 @@
     "testEnvironment": "node"
   },
   "overrides": {
+    "tar": "^7.5.7",
+    "fast-xml-parser": "^5.3.4",
+    "lodash": "^4.17.23",
     "jwa": "^2.0.0",
     "js-yaml": "^4.1.1",
     "sqlite3": {
