--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,7 +42,9 @@
     "react-dom": "^18.0.0",
     "react-markdown": "^9.0.1",
     "react-oidc-context": "^3.2.0",
+    "react-pull-to-refresh": "^2.0.1",
     "react-router-dom": "^7.4.0",
+    "react-swipeable": "^7.0.2",
     "remark-gfm": "^4.0.0",
     "rrule": "^2.8.1",
     "shadcn": "^2.5.0",
