--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -15,6 +15,9 @@ PORT=3000
 # Hermes API (for text-to-speech)
 HERMES_API_URL=http://localhost:8000
 
+# Thoth WebSocket (for speech-to-text transcription)
+THOTH_WS_URL=ws://localhost:8443
+
 # SMTP Configuration (for email reminders)
 # Gmail example:
 SMTP_HOST=smtp.gmail.com
