--- a/backend/package.json
+++ b/backend/package.json
@@ -43,6 +43,7 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.0",
     "@nestjs/platform-express": "^11.0.0",
+    "@nestjs/platform-socket.io": "^11.1.13",
     "@nestjs/platform-ws": "^11.1.13",
     "@nestjs/schedule": "^6.1.0",
     "@nestjs/swagger": "^11.2.3",
