feat(auth): Implement user registration with throttling and environment-based configuration - Added registration endpoint with validation and throttling. - Introduced ALLOW_REGISTRATION and FRONTEND_ORIGIN environment variables for security and CORS configuration. - Updated README and .env.sample to reflect new configuration options. - Refactored app.module.ts to include ThrottlerGuard for rate limiting.

--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -9,6 +9,12 @@ COOKIE_KEY=your-cookie-key-here-change-in-production
 # Environment
 NODE_ENV=development
 
+# Security (optional)
+# Set to false to disable public registration (recommended for production single-user apps)
+ALLOW_REGISTRATION=true
+# Comma-separated list of allowed CORS origins (omit to allow all origins, e.g. in development)
+# FRONTEND_ORIGIN=https://your-domain.com,https://www.your-domain.com
+
 # Server Configuration (optional)
 PORT=3000
 
